--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,10 +1,18 @@
-<h1>Add new image</h1>
-<%= form_tag("/images", method: "post") do %>
-  <%= file_field_tag(:image)%>
-  <%= submit_tag("Add image") %>
-<% end %>
-
-<h1>List of images</h1>
+<div class="text-center">
+  <h3>Add new image</h3>
+  <div class="row">
+    <div class="col-lg-4 col-lg-offset-4">
+  <%= form_tag({method: "post"}, multipart: true) do %>
+    <%= file_field_tag(:image, class: "form-control")%>
+    <span class="input-group-btn">
+      <%= submit_tag("Add image", class: "btn btn-default") %>
+    </span>
+  <% end %>
+  </div> </div>
+</div>
+<div class="text-center">
+  <h1>List of images</h1>
+</div>
 <ul class="row" id="images-list">
   <% @images.each do |image| %>
     <li class="col-xs-3">
